creating a new URL path

--- a/themes/main-theme/post.html
+++ b/themes/main-theme/post.html
@@ -7,8 +7,8 @@
     <title>Lighttouch</title>
 </head>
 <body>
-    <h1>Welcome to Lighttouch powered by Torchbear</h1>
-    <p>{{message}}</p>
-    <a href="/posts">Go to posts</a>
+    <p>Another view here can go posts for example</p>
+    <a href="/">Go back</a>
+
 </body>
 </html>
