--- a/themes/main-theme/index.html
+++ b/themes/main-theme/index.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Lighttouch</title>
-</head>
-<body>
+{% extends "^/layout/layout.html" %}
+
+{% block content %}
     <h1>Welcome to Lighttouch powered by Torchbear</h1>
     <p>{{message}}</p>
     <a href="/posts">Go to posts</a>
-</body>
-</html>
+{% endblock content %}
