--- a/themes/main-theme/post.html
+++ b/themes/main-theme/post.html
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Lighttouch</title>
-</head>
-<body>
+{% extends "^/layout/layout.html" %}
+
+{% block content %}
     <p>Another view here can go posts for example</p>
     <a href="/">Go back</a>
-
-</body>
-</html>
+{% endblock content %}
