blocks and super inheritance

--- a/themes/main-theme/post.html
+++ b/themes/main-theme/post.html
@@ -1,6 +1,7 @@
-{% extends "^/layout/layout.html" %}
+{% extends "posts/format.html" %}
 
 {% block content %}
+    {{super()}}
     <p>Another view here can go posts for example</p>
     <a href="/">Go back</a>
 {% endblock content %}
