_style sintax and use

--- a/themes/main-theme/post.html
+++ b/themes/main-theme/post.html
@@ -3,5 +3,5 @@
 {% block content %}
     {{super()}}
     <p>Another view here can go posts for example</p>
-    <a href="/">Go back</a>
+    <a link href="/">Go back</a>
 {% endblock content %}
