--- a/themes/main-theme/index.html
+++ b/themes/main-theme/index.html
@@ -1,7 +1,7 @@
 {% extends "^/layout/layout.html" %}
 
 {% block content %}
-    <h1>Welcome to Lighttouch powered by Torchbear</h1>
+    <h1 title>Welcome to Lighttouch powered by Torchbear</h1>
     <p>{{message}}</p>
-    <a href="/posts">Go to posts</a>
+    <a link href="/posts">Go to posts</a>
 {% endblock content %}
