--- a/themes/main-theme/index.html
+++ b/themes/main-theme/index.html
@@ -1,7 +1,9 @@
 {% extends "^/layout/layout.html" %}
 
 {% block content %}
+    {{super()}}
     <h1>Welcome to Lighttouch powered by Torchbear</h1>
     <p>{{message}}</p>
     <a href="/posts">Go to posts</a>
 {% endblock content %}
+
